fix spacing of headings

--- a/themes/unya/sass/_navigation.scss
+++ b/themes/unya/sass/_navigation.scss
@@ -387,9 +387,11 @@ a {
 		flex-direction: column;
 		h2 {
 			color: #fff;
+			margin-bottom: 0;
 		}
 		h4 {
 			margin-left: 15.7rem;
+			margin-top: 0;
 		}
 	}
 	ul {
@@ -450,9 +452,11 @@ a {
 		flex-direction: column;
 		h2 {
 			text-align: left;
+			margin-bottom: 0;
 		}
 		h4 {
 			margin-left: 15.7rem;
+			margin-top: 0;
 		}
 	}
 }
